--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </section>
-        <div class="main_event default">
+        <section class="main_event default">
             <div class="title">
                 <h2>오늘 점심은?</h2>
                 <p>맛있는 도시락</p>
@@ -83,7 +83,7 @@
                     <em>만두와 딤섬 그 사이</em>
                 </div>
             </div>
-        </div>
+        </section>
     </main>
     <footer id="footer">
         <div class="inner">
